saving before figuring out cards issue: #1 sizing not responsively

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 20rem; }
   .card__side {
     height: 20rem;
     transition: all 0.8s ease;
@@ -12,13 +12,18 @@
     width: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border-radius: 3px;
+    border-radius: 5%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     overflow: hidden; }
     .card__side--front {
       background-color: white; }
     .card__side--back {
-      transform: rotateY(180deg); }
+      transform: rotateY(180deg);
+      font-size: 1rem;
+      max-width: 100%;
+      max-height: 100vh;
+      display: grid;
+      height: 100%; }
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
   .card:hover .card__side--front {
@@ -38,7 +43,9 @@
     .card__picture--3 {
       background-image: url(../img/cloud-adoption.jpg); }
   .card__heading {
-    font-size: 2.8rem;
+    padding-top: 2rem;
+    text-align: center;
+    font-size: 1.5rem;
     font-weight: 300;
     text-transform: uppercase;
     text-align: right;
