--- a/public/sass/_cards.scss
+++ b/public/sass/_cards.scss
@@ -32,7 +32,7 @@ $gutter-horizontal: 6rem;
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
+  height: 20rem;
 
   &__side {
     // color: #fff;
@@ -44,7 +44,7 @@ $gutter-horizontal: 6rem;
     width: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border-radius: 3px;
+    border-radius: 5%;
     box-shadow: 0 1.5rem 4rem rgba(black, 0.4);
     overflow: hidden;
     // font-size: 1rem;
@@ -53,6 +53,19 @@ $gutter-horizontal: 6rem;
     }
     &--back {
       transform: rotateY(180deg);
+      font-size: 1rem;
+      // vertical-align: middle;
+      // top: 50%;
+      // font-size: 1.5vw;
+      // margin-left: 50px;
+      // vertical-align: middle;
+      // // position: relative;
+      // // top: 50%;
+      // // transform: translateY(20%);
+      max-width: 100%;
+      max-height: 100vh;
+      display: grid;
+      height: 100%;
       &-1 {
         background-image: linear-gradient(
           to right bottom,
@@ -95,7 +108,9 @@ $gutter-horizontal: 6rem;
     }
   }
   &__heading {
-    font-size: 2.8rem;
+    padding-top: 2rem;
+    text-align: center;
+    font-size: 1.5rem;
     font-weight: 300;
     text-transform: uppercase;
     text-align: right;
